--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
 
-*win.toml text eol=crlf
+*.toml text eol=lf
